# h24w_14

./: .dockerignore  Dockerfile  README.md  h24w_14.code-workspace
.github/workflows/: client.yml  proto.yml  server.yml
client/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
client/src/: App.tsx  explorer.ts  main.tsx  message.ts  reactions.ts  speakerPhone.ts
client/src/api/: auth.ts  explorer.ts  hostname.ts  message.ts  reaction.ts  speakerPhone.ts  transport.ts  user.ts  world.ts
client/src/components/: InputMessage.tsx  RactionPicker.tsx  SpeakerPhoneButton.tsx  StampPicker.tsx  Timeline.tsx
client/src/mocks/: browser.ts
client/src/model/: ExplorerAction.ts  explorer.ts  message.ts  reactions.ts  speakerPhone.ts  user.ts
client/src/pixi/: Canvas.tsx  Position.ts  World.tsx  reactions.ts  theme.ts
client/src/pixi/components/: Bubble.tsx  Circle.tsx  Explorer.tsx  Message.tsx  MessageIcon.tsx  OtherExplorer.tsx  Reaction.tsx  Rectangle.tsx  SpeakerPhone.tsx
client/src/pixi/hooks/: message.ts
client/src/schema/: AuthServiceClientPb.ts  MessageServiceClientPb.ts  ReactionServiceClientPb.ts  Speaker_phoneServiceClientPb.ts  UserServiceClientPb.ts  WorldServiceClientPb.ts  auth.ts  auth_pb.d.ts  auth_pb.js  explore.ts  explore_pb.d.ts  explore_pb.js  message.ts  message_pb.d.ts  message_pb.js  reaction.ts  reaction_pb.d.ts  reaction_pb.js  speaker_phone.ts  speaker_phone_pb.d.ts  speaker_phone_pb.js  user.ts  user_pb.d.ts  user_pb.js  world.ts  world_pb.d.ts  world_pb.js
client/src/schema/google/protobuf/: timestamp.ts
client/src/schema2/: auth.client.ts  auth.ts  explore.ts  message.client.ts  message.ts  reaction.client.ts  reaction.ts  speaker_phone.client.ts  speaker_phone.ts  user.client.ts  user.ts  world.client.ts  world.ts
client/src/state/: dispatcher.ts  explorer.ts  field.ts  me.ts  message.ts  reactions.ts  speakerPhone.ts  userPosition.ts
client/src/timeline/: InputMessage.tsx  Timeline.tsx  timeline.tsx
client/src/util/: field.ts  icon.ts
proto/: .clang-format  README.md  auth.proto  explore.proto  message.proto  reaction.proto  speaker_phone.proto  traq.proto  user.proto  world.proto
server/: .env.dev  Cargo.toml  Dockerfile  compose.local.yml  compose.yml  rust-toolchain.toml
server/migrations/: 1_init.sql  1_init_user.sql  2_init_message.sql  2_init_reaction.sql  2_init_traq.sql
server/schema/: Cargo.toml  build.rs
server/schema/src/: lib.rs
server/src/: event.rs  explore.rs  lib.rs  main.rs  message.rs  prelude.rs  reaction.rs  router.rs  session.rs  speaker_phone.rs  task.rs  traq.rs  traq_user.rs  user.rs  world.rs
server/src/event/: error.rs  impl.rs
server/src/explore/: error.rs  impl.rs
server/src/message/: error.rs  grpc.rs  impl.rs
server/src/reaction/: error.rs  grpc.rs  impl.rs
server/src/router/: grpc.rs  other.rs
server/src/session/: error.rs  impl.rs  layer.rs
server/src/speaker_phone/: error.rs  grpc.rs  impl.rs  load.rs
server/src/traq/: auth.rs  bot.rs  channel.rs  message.rs  user.rs
server/src/traq/auth/: error.rs  grpc.rs  impl.rs
server/src/traq/bot/: config.rs  error.rs  impl.rs  tower.rs
server/src/traq/channel/: error.rs  impl.rs
server/src/traq/message/: error.rs  impl.rs
server/src/traq/user/: error.rs  impl.rs
server/src/user/: error.rs  grpc.rs  impl.rs
server/src/world/: error.rs  grpc.rs  impl.rs
