[package]
name = "h24w14"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.85"
axum.version = "0.8.1"
axum.features = ["http2", "ws"]
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server-auto", "server-graceful", "service"] }
prost = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx.version = "0.8.3"
sqlx.features = ["mysql", "runtime-tokio", "tls-rustls", "chrono", "uuid"]
thiserror = "2.0.11"
tonic.version = "0.12.3"
tonic.default-features = false
tonic.features = ["codegen", "prost", "channel"]
tonic-types = "0.12.3"
tonic-web = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "steer"] }
tower-http = { version = "0.6.2", features = ["trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.12.0", features = ["v7", "serde"] }

[build-dependencies]
tonic-build = "0.12.3"
