[workspace]
resolver = "2"
members = ["./.", "./schema"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.85"
axum.version = "0.8.1"
axum.features = ["http2", "ws"]
axum-extra.version = "0.10.0"
axum-extra.features = ["cookie", "cookie-private", "cookie-signed", "query", "typed-header"]
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server-auto", "server-graceful", "service"] }
oauth2.version = "5.0.0"
oauth2.default-features = false
oauth2.features = ["reqwest", "rustls-tls"]
percent-encoding = "2.3.1"
prost = "0.13.4"
prost-types = "0.13.4"
reqwest.version = "0.12.12"
reqwest.default-features = false
reqwest.features = ["http2", "rustls-tls", "charset", "json", "macos-system-configuration"]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx.version = "0.8.3"
sqlx.features = ["mysql", "runtime-tokio", "tls-rustls", "chrono", "uuid"]
thiserror = "2.0.11"
tonic.version = "0.12.3"
tonic.default-features = false
tonic.features = ["codegen", "prost", "channel"]
tonic-build = "0.12.3"
tonic-types = "0.12.3"
tonic-web = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "steer"] }
tower-http = { version = "0.6.2", features = ["trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
traq-bot-http = { version = "0.11.2", features = ["uuid", "chrono", "tower"] }
uuid = { version = "1.12.0", features = ["v7", "serde"] }

[package]
name = "h24w14"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
oauth2.workspace = true
percent-encoding.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-types.workspace = true
tonic-web.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
traq-bot-http.workspace = true
uuid.workspace = true

schema.path = "./schema"
