[package]
name = "schema"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
tonic.workspace = true
tonic-types.workspace = true
tonic-web.workspace = true

[build-dependencies]
tonic-build.workspace = true
